# DIR2023

./: .env  README.md  docker-compose.yml  main.py
Backend/: db_model.py  dir_api.py  nativeApp_DAL.py  pyproject.toml  test_requests.txt
Frontend/: pyproject.toml  webserver.py
Frontend/web/: dashboard.html
NativeApp/: data.csv  main.py
NativeApp/Calibration/: camera_calibration.py
NativeApp/Vision/: calibration.py  edge_detector.py
NativeApp/lib/: robot.py
NativeApp/points_data/: positions.csv
nginx/: nginx.conf
nginx/static/: dashboard_script.js  dashboard_style.css
